8025629: load function should support a way to load scripts from classpath
Reviewed-by: lagergren, hannesw, attila